codding up haval

--- a/portfolio.html
+++ b/portfolio.html
@@ -107,6 +107,14 @@
           </div>
         </article>
         <article class="card portfolio-card reveal">
+          <img src="images/portofolio/haval.png" alt="Market Research - Haval" />
+          <div class="card-body">
+            <h2>Market Research - Haval</h2>
+            <p>Analisis strategi Haval menembus pasar SUV hybrid lewat value gap, perbandingan fitur, harga, risiko, serta kelayakan finansialnya</p>
+            <a class="btn btn-primary" href="contact.html">Lihat Detail</a>
+          </div>
+        </article>
+        <article class="card portfolio-card reveal">
           <img src="images/portofolio/primahome.png" alt="Strategy Sales - Prima Home" />
           <div class="card-body">
             <h2>Strategy Sales - Prima Home</h2>
@@ -128,10 +136,11 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; 2026 Ghailan Rasendriya Samara. All rights reserved.</p>
+      <p>&copy; 2026 Ghailan Rasendriya Samara. All rights reserved</p>
     </div>
   </footer>
 
   <script src="js/script.js"></script>
 </body>
 </html>
+
